[package]
name = "random-names"
version = "0.1.3"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
description = "Simple random names that can be used to name components for log files etc."
license = "MIT/Apache-2.0"
homepage = "https://github.com/chridou/random-names-rs"
repository = "https://github.com/chridou/random-names-rs"


[dependencies]
rand = "0.3.*"
